add link to my github

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
             </div>
         </div>
     </div>
+    <hr />
+    <h4 class="Github-link">
+        <a href="https://github.com/kimiouch/weatherAppW6">open source code</a> by kimia haghighi🦕
+    </h4>
     <script src="./index.js"></script>
 </body>
 
